# ia_metric

./: .gitignore  CMakeLists.txt  IA_MetricConfig.h.in
include/IA_Metric/: computer.h  cost_of_goods_sold.h  cost_of_goods_sold_set.h  metric.h  metric_set.h  revenue.h  revenue_set.h
src/: main.cpp
src/computer/: computer.cpp
src/metric/: cost_of_goods_sold.cpp  cost_of_goods_sold.h  cost_of_goods_sold_set.cpp  metric.cpp  metric.h  metric_set.cpp  revenue.cpp  revenue.h  revenue_set.cpp
